samples/_failures_safe/1761486607_862438_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99bd6727.c: In function ‘main’:
./samples/SAFE/__tmp_99bd6727.c:126:5: error: expected declaration or statement at end of input
  126 |     add_log_entry(&analyzer, "2024-01-15 10:45:30", "INFO", "Backup completed");
      |     ^~~~~~~~~~~~~
